--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -66,10 +66,7 @@
 
 
 .container_info{
-  background-image: url('../assets/bg_babershop_listras.jpg');
-  background-size: cover; 
-  background-position: center; 
-  background-repeat: no-repeat; 
+  background-color: #fff;
   width: 90%;
   height: 18rem;
   margin-bottom: -200px;
@@ -116,7 +113,7 @@
   padding: 5px;
   margin-top: 5px;
   border-bottom: 3px solid #AB0A0A;
-  color: #fff;
+  color: #000000;
 }
 
 
@@ -133,7 +130,7 @@
   flex: 1;
   justify-content: flex-start;
   align-items: center;
-  color: #ffffff;
+  color: #000000;
   flex-direction: column;
 }
 
