Andamento responsividade services price component

--- a/src/styles/CardPriceServices.module.css
+++ b/src/styles/CardPriceServices.module.css
@@ -48,3 +48,16 @@
   margin-top: 10px;
 }
 
+@media (max-width: 800px){
+  .block_price_service h5, .block_price_service span{
+    font-size: 18px;
+  }
+
+  .block_image_service img{
+    width: 50px;
+    height: 50px;
+  }
+  
+}
+
+
