--- a/src/styles/InfoCard.module.css
+++ b/src/styles/InfoCard.module.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 200px;
+    background-color: aqua;
 }
 .box_infocard{
     width: 70%;
@@ -46,4 +47,25 @@
     justify-content: center;
     color: #000;
 }
+
+
+@media (max-width: 1130px){
+    .box_infocard{
+        width: 100%;
+    }
+}
+
+@media (max-width: 800px){
+    .card_prices{
+        width: 95%;
+    }
+    .box_infocard p{
+        width: 100%;
+    }
+}
+
+@media (max-width: 600px){
+    
+}
+
 
