--- a/src/styles/CardPriceServices.module.css
+++ b/src/styles/CardPriceServices.module.css
@@ -39,6 +39,7 @@
   font-size: 16px;
   text-align: start;
   margin-top: 15px;
+  width: 80%;
 }
 
 .block_price_service span{
@@ -60,4 +61,23 @@
   
 }
 
+@media(max-width:650px){
+  .line_services_prices{
+    flex-direction: column;
+    margin:0;
+  }
+  .block_one, .block_two{
+    margin: 30px 0;
+  }
+}
 
+.block_price_service p{
+  width: 70%;
+}
+
+@media(max-width:440px){
+.block_price_service p{
+  width: 80%;
+}
+
+}
