--- a/src/styles/InfoCard.module.css
+++ b/src/styles/InfoCard.module.css
@@ -1,15 +1,13 @@
 .container_infocard{
     width: 100%;
-    height: 100rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 200px;
-    background-color: aqua;
+    margin-top: 150px;
+    padding: 15px;
 }
 .box_infocard{
     width: 70%;
-    height: 100rem;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -21,17 +19,16 @@
     font-weight: 800;
     font-size: 48px;
     text-transform: uppercase;
-    width: 50%;
     text-align: center;
     
 }
 
-.box_infocard p{
+.infocard_text{
     font-family: "Work Sans", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
-    width: 60%;
+    width: 70%;
     text-align: center;
     margin-top: 30px;
 }
@@ -59,13 +56,23 @@
     .card_prices{
         width: 95%;
     }
-    .box_infocard p{
-        width: 100%;
+    .infocard_text{
+        width: 80%;
     }
 }
 
-@media (max-width: 600px){
-    
+@media(max-width:650px){
+    .card_prices{
+        height: 100%;
+    }
+    .box_infocard h3{
+        font-size: 35px;
+    }
+    .infocard_text{
+        font-size: 16px;
+    }
 }
+
+
 
 
