--- a/src/styles/InfoCard.module.css
+++ b/src/styles/InfoCard.module.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 150px;
+    margin-top: 100px;
     padding: 15px;
 }
 .box_infocard{
@@ -43,6 +43,7 @@
     align-items: center;
     justify-content: center;
     color: #000;
+    border-radius: 30px;
 }
 
 
