--- a/src/styles/DataBlockTwo.module.css
+++ b/src/styles/DataBlockTwo.module.css
@@ -138,6 +138,12 @@
     margin-top: 30px;
   }
   .box_datablocktwo{
-      height: 70rem;
+      height: 60rem;
+  }
+  .block_text{
+    padding: 10px;
+  }
+  .container_datablocktwo{
+    margin-top: 150px;
   }
 }
