--- a/src/styles/InfoCard.module.css
+++ b/src/styles/InfoCard.module.css
@@ -46,6 +46,25 @@
     border-radius: 30px;
 }
 
+.expandedImageOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .expandedImage {
+    max-width: 90%;
+    max-height: 90%;
+    object-fit: contain;
+  }
+
 
 @media (max-width: 1130px){
     .box_infocard{
