--- a/src/styles/CaroselTeam.module.css
+++ b/src/styles/CaroselTeam.module.css
@@ -39,7 +39,7 @@
 }
 
 .title_red {
-  color: #960C0C;
+  color: #AB0A0A;
 }
 
 .carouselContainer {
@@ -155,7 +155,7 @@
 
 .newNext {
   cursor: pointer;
-  transform: translateX(560px) scale(0.85); /* Ajuste de posição */
+  transform: translateX(2020px) scale(0.85); /* Ajuste de posição */
   overflow: hidden;
 }
 
