--- a/src/styles/PhotoGalleryMobile.module.css
+++ b/src/styles/PhotoGalleryMobile.module.css
@@ -7,6 +7,7 @@
   background-position: center;
   background-repeat: no-repeat;
   display: none;
+  overflow: hidden;
 }
 
 .galeryMobi_container :global(.slick-slider) {
@@ -33,6 +34,7 @@
   border: none;
   outline: none;
   cursor: pointer;
+  border: 1px solid #fff;
 }
 
 .modal {
@@ -46,6 +48,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+
 }
 
 .modalImage {
@@ -53,6 +56,7 @@
   max-height: 80%;
   border: none;
   outline: none;
+  
 }
 
 .noScroll {
@@ -67,3 +71,17 @@
   display: flex;
 }
 }
+
+@media(max-width:500px){
+  .galeryMobi_container :global(.slick-slide img) {
+    max-width: 90%;
+    max-height: 90%;
+    object-fit: contain;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border: 1px solid #fff;
+  }
+}
+
+
