--- a/src/styles/DataBlockTwo.module.css
+++ b/src/styles/DataBlockTwo.module.css
@@ -61,6 +61,11 @@
   margin-top: 60px;
 }
 
+.button:hover {
+  background-color: #181818;
+  transition: 0.2s all linear;
+}
+
 
 @media(max-width:1440px){
   .block_text{
