--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -34,6 +34,10 @@
   
 }
 
+.area_info_footer a {
+  text-decoration: none;
+}
+
 .block_icon{
   width: 100%;
   display: flex;
@@ -111,6 +115,11 @@
   border-radius: 10px;
   width: 180px;
   cursor: pointer;
+}
+
+.button:hover {
+  background-color: #6d0909;
+  transition: 0.2s all linear;
 }
 
 
