--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -104,29 +104,31 @@
   bottom: 0;
   right: 0;
   background-color: #e53939;
-  width: 30%;
+  width: 100%;
   justify-content: center;
   align-items: center;
   display: none;
   color: #ffffff;
   position: fixed;
   z-index: 999;
+  
+  
 }
 
 .menuSidebar ul, li{
   width: 100%;
+  height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content:space-evenly;
   align-items: center;
   flex-direction: column;
+  
 }
 
 .menuSidebar li{
   font-family: "Work Sans", sans-serif;
   font-weight: 500;
   color: #fff;
-  
-  padding: 25px;
 }
 
 .menuSidebar li:hover{
