--- a/src/styles/CaroselTeam.module.css
+++ b/src/styles/CaroselTeam.module.css
@@ -45,8 +45,6 @@
 .carouselContainer {
   width: 100%; 
   position: relative;
-  
-  
 }
 
 .list {
@@ -59,22 +57,22 @@
 }
 
 .slide {
-  width: 500px; /* Aumentando a largura do slide */
-  height: 600px; /* Aumentando a altura do slide */
+  width: 500px;
+  height: 600px;
   position: absolute;
-  border-radius: 2px;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   color: white;
-  transition: transform 0.1s, opacity 1s;
+  transition: transform 0.5s ease, opacity 0.5s ease;
   padding: 10px;
-  margin: 0 20px; /* Adicionando margem lateral */
-  border-radius: 20px;
   border: 2px solid #fff;
-
+  opacity: 0;
+  pointer-events: none;
+  z-index: 1;
 }
 
 .redCard {
@@ -85,8 +83,27 @@
   background-color: blue;
 }
 
+.act {
+  opacity: 1;
+  transform: translateX(0) scale(1.1);
+  z-index: 3;
+  pointer-events: auto;
+}
+
+.next,
+.prev{
+  opacity: 1;
+  transform: translateX(110%) scale(0.7);;
+  z-index: 2;
+  pointer-events: auto;
+}
+
+.prev {
+  transform: translateX(-110%) scale(0.7);
+}
+
 .slideImage {
-  width: 300px; /* Aumentando o tamanho da imagem */
+  width: 300px;
   height: 300px;
   object-fit: cover;
   border-radius: 50%;
@@ -108,7 +125,7 @@
   gap: 10px;
 }
 
-.slideButtons a{
+.slideButtons a {
   text-decoration: none;
 }
 
@@ -136,114 +153,75 @@
   align-items: center; 
 }
 
-.instagramIcon{
+.instagramIcon {
   margin-left: 20px;
   font-size: 25px;
 }
 
 .slideButtons button:hover {
-  background-color: #333333; /* Mudança de cor ao passar o mouse */
+  background-color: #333333;
 }
 
-.act {
-  opacity: 1;
-}
-
-.prev {
-  cursor: pointer;
-  transform: translateX(-560px) scale(0.85); /* Ajuste de posição */
-  position: absolute;
-}
-
-.next {
-  cursor: pointer;
-  transform: translateX(560px) scale(0.85); /* Ajuste de posição */
-  overflow: hidden;
-}
-
-.newNext {
-  cursor: pointer;
-  transform: translateX(2020px) scale(0.85); /* Ajuste de posição */
-  overflow: hidden;
-}
-
-.swipe {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-}
-
-/* Ajuste para a tela pequena */
 @media (max-width: 1600px) {
   .prev {
-    cursor: pointer;
-    transform: translateX(-560px) scale(0.85); /* Ajuste de posição */
+    transform: translateX(-110%);
   }
   
   .next {
-    cursor: pointer;
-    transform: translateX(560px) scale(0.85); /* Ajuste de posição */
+    transform: translateX(110%);
   }
-  
 }
 
 @media (max-width: 980px) {
   .prev {
-    cursor: pointer;
-    transform: translateX(-300px) scale(0.85); /* Ajuste de posição */
+    transform: translateX(-130%);
   }
   
   .next {
-    cursor: pointer;
-    transform: translateX(300px) scale(0.85); /* Ajuste de posição */
+    transform: translateX(130%);
   }
   
-  .slideImage{
+  .slideImage {
     width: 180px;
     height: 180px;
   }
-  .slide{
+  .slide {
     width: 300px;
     height: 500px;
   }
-  .title{
+  .title {
     font-size: 40px;
   }
 }
 
 @media (max-width: 500px) {
   .prev {
-    cursor: pointer;
-    transform: translateX(-250px) scale(0.85); /* Ajuste de posição */
+    transform: translateX(-110%);
   }
   
   .next {
-    cursor: pointer;
-    transform: translateX(250px) scale(0.85); /* Ajuste de posição */
+    transform: translateX(110%);
   }
   
-  .slideImage{
+  .slideImage {
     width: 150px;
     height: 150px;
   }
-  .slide{
+  .slide {
     width: 250px;
     height: 400px;
   }
-  .slideText{
+  .slideText {
     font-size: 20px;
   }
-  .slideButtons button{
+  .slideButtons button {
     font-size: 16px;
     padding: 5px 10px;
   }
-  .instagramIcon{
+  .instagramIcon {
     font-size: 16px;
   }
-  .box_carosel{
+  .box_carosel {
     height: 50rem;
   }
 }
